--- a/spotify-access-token-requestor-ibmace/SpotifyLib/.project
+++ b/spotify-access-token-requestor-ibmace/SpotifyLib/.project
@@ -1,18 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SpotifyAccessTokenRequestor</name>
+	<name>SpotifyLib</name>
 	<comment></comment>
 	<projects>
-		<project>SpotifyLib</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
-			<name>com.ibm.etools.mft.restapi.ui.restApiBuilder</name>
+			<name>com.ibm.etools.mft.applib.applibbuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
 		<buildCommand>
-			<name>com.ibm.etools.mft.json.builder.JSONBuilder</name>
+			<name>com.ibm.etools.mft.applib.applibresourcevalidator</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>com.ibm.etools.mft.connector.policy.ui.PolicyBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>com.ibm.etools.mft.connector.ui.editor.connectorServiceBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>com.ibm.etools.mft.connector.ui.editor.connectorEventBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>com.ibm.etools.mft.uri.sharedlibbuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
@@ -72,6 +91,11 @@
 			</arguments>
 		</buildCommand>
 		<buildCommand>
+			<name>com.ibm.etools.mft.json.builder.JSONBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
 			<name>com.ibm.etools.mft.restapi.ui.restApiDefinitionsBuilder</name>
 			<arguments>
 			</arguments>
@@ -102,29 +126,13 @@
 			</arguments>
 		</buildCommand>
 		<buildCommand>
-			<name>com.ibm.etools.mft.applib.applibbuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>com.ibm.etools.mft.applib.applibresourcevalidator</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>com.ibm.etools.mft.connector.policy.ui.PolicyBuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
 			<name>com.ibm.dfdl.validation.dfdlBuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
 	</buildSpec>
 	<natures>
-		<nature>com.ibm.etools.mft.restapi.ui.Nature</nature>
+		<nature>com.ibm.etools.msgbroker.tooling.libraryNature</nature>
 		<nature>com.ibm.etools.msgbroker.tooling.messageBrokerProjectNature</nature>
-		<nature>com.ibm.etools.msgbroker.tooling.applicationNature</nature>
 	</natures>
 </projectDescription>
